# rules_cpan

./: .bazelrc  BUILD.bazel  MODULE.bazel  gazelle_python.yaml  gazelle_python_with_types.yaml  requirements.in  requirements_lock.txt
cpan/: BUILD  build-with-make.pl  cpan_library.bzl  install.bzl  run-makefile.pl
example/: BUILD  MODULE.bazel  cpanfile  cpanfile-lock.json
example/t/: loads_from_cpan.pl
lock/: BUILD
snapshot/: BUILD  dump-core-modules.pl  snapshot.py
